@@ -2,7 +2,7 @@ substituteEps <- function(graph, eps=10^(-4)) {
 	if (is.numeric(graph@m)) return(graph)
 	m <- matrix(gsub("\\\\epsilon", eps, graph@m), nrow=length(nodes(graph)))
 	options(warn=-1)
-	m2 <- matrix(sapply(graph@m, function(x) {
+	m2 <- matrix(sapply(m, function(x) {
 						result <- try(eval(parse(text=x)), silent=TRUE);
 						ifelse(class(result)=="try-error",NA,result)
 					}), nrow=length(nodes(graph)))
